--- a/OnlineAssessmentApplication.Repository/OnlineAssessmentApplication.Repository.csproj
+++ b/OnlineAssessmentApplication.Repository/OnlineAssessmentApplication.Repository.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerRepository.cs" />
+    <Compile Include="QuestionRepository.cs" />
     <Compile Include="TestRepository.cs" />
     <Compile Include="UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
